dev/tests/cases/neg/52_arg_type_int_to_f64.tv
df scale(factor: f64) -> void { echo!(factor); }
df main() -> void {
    scale(3);
}
